--- a/assets/styles/profile.css
+++ b/assets/styles/profile.css
@@ -12,7 +12,16 @@
     display: inline;
     margin-top: 1vw ;
     align-items: center;
+  }
 
+  .content-box {
+    border: 1px solid #ccc;
+    padding: 20px;
+  }
+  
+  .content-box label {
+    display: block;
+    margin-bottom: 5px;
   }
 main {
     margin: 10px ;
@@ -178,3 +187,49 @@ input[type="textarea"]{
   label{
     color:black
   }
+
+  
+
+  .profile-picture {
+    opacity: 0.75;
+    height: 250px;
+    width: 250px;
+    position: relative;
+    overflow: hidden;
+  
+    /* default image */
+    background: url('https://qph.cf2.quoracdn.net/main-qimg-f32f85d21d59a5540948c3bfbce52e68');
+  
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    box-shadow: 0 8px 6px -6px black;
+  }
+  .file-uploader {
+    /* make it invisible */
+    opacity: 0;
+    /* make it take the full height and width of the parent container */
+    height: 100%;
+    width: 100%;
+    cursor: pointer;
+    /* make it absolute */
+    position: absolute;
+    top: 0%;
+    left: 0%;
+  }
+  .upload-icon {
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    /* initial icon state */
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    color: #ccc;
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: #bbb;
+  }
+  .profile-picture:hover .upload-icon {
+    opacity: 1;
+  }
+  
