--- a/assets/styles/profile.css
+++ b/assets/styles/profile.css
@@ -13,15 +13,46 @@
     margin-top: 1vw ;
     align-items: center;
   }
-
+  #saved2 {
+    line-height:20px;
+    }
+    #saved2 .content-box .column{
+        border:1px solid blue
+    }
+    #saved2 h1 {
+        color: #007bff;
+    }
+#saved1 {
+line-height:20px;
+}
+#saved1 .content-box .column{
+    border:1px solid blue
+}
+#saved1 h1 {
+    color: #007bff;
+}
   .content-box {
-    border: 1px solid #ccc;
+    border: 4px solid black;
     padding: 20px;
-  }
+    border-radius: 40px;
+    margin: 20px 50px 4%;
+    text-align:center;
+}
+.content-box1 {
+    border: 4px solid black;
+    padding: 20px;
+    border-radius: 40px;
+    margin: 20px 100px 4%;
+    text-align:center;
+}
   
   .content-box label {
     display: block;
     margin-bottom: 5px;
+  }
+ label[for="textbox2"] {
+    color:#111;
+    background-color: #79C6D7;
   }
 main {
     margin: 10px ;
@@ -184,11 +215,14 @@ input[type="textarea"]{
     border:2px solid #111;
     width: 120px;
   }
-  label{
+  div label{
     color:black
   }
 
-  
+  main label {
+    font-size: 20px;
+    color: #1c2786;
+  }
 
   .profile-picture {
     opacity: 0.75;
@@ -231,5 +265,20 @@ input[type="textarea"]{
   }
   .profile-picture:hover .upload-icon {
     opacity: 1;
+  }
+  .container {
+    display: flex;
+  }
+  
+  .column {
+    flex: 1;
+    width:300px;
+    height:400px;
+    background-color: #5a8fa1;
+  }
+  .column1 {
+    flex: 1;
+    width:300px;
+    height:400px;
   }
   
