--- a/assets/styles/profile.css
+++ b/assets/styles/profile.css
@@ -7,13 +7,23 @@
   bottom: 30px;
   padding: 50px;
 }
-
+#grad1 {
+  height:fit-content;
+  background-color: rgb(170, 204, 236); /* For browsers that do not support gradients */
+  background-image: linear-gradient(to bottom right, #688EBA, #79BFD4);
+}
+button {
+  height:20px;
+  
+}
 #third-page {
     margin: 10px 12%;
        height:max-content;
    }
    body {
     background-color: #79C6D7;
+    background-image: linear-gradient(to bottom right, #79C6D7,#74A1C7,#619DB7,#79C6D7);
+
    }
 
    img#logo {
@@ -28,17 +38,16 @@
     #saved2 .content-box .column{
         border:1px solid blue
     }
-    #saved2 h1 {
-        color: #007bff;
-    }
+    
 #saved1 {
 line-height:20px;
 }
 #saved1 .content-box .column{
     border:1px solid blue
 }
-#saved1 h1 {
-    color: #007bff;
+#saved1 h1, #saved2 h1 {
+    font-family: "Julius Sans One";
+    
 }
   .content-box {
     border: 4px solid black;
@@ -46,6 +55,7 @@ line-height:20px;
     border-radius: 40px;
     margin: 20px 50px 4%;
     text-align:center;
+    
 }
 .content-box1 {
     border: 4px solid black;
@@ -111,9 +121,10 @@ main {
     unicode-bidi: isolate;
   }
   header {
-    font-family: "Nokora";
+    font-family: "Julius Sans One";
     justify-content: space-around;
     font-size: 29px;
+    line-height:60px;
   }
   
   header menu li {
@@ -284,7 +295,7 @@ input[type="textarea"]{
     flex: 1;
     width:300px;
     height:400px;
-    background-color: #5a8fa1;
+    background-color: #79BFD4;
   }
   .column1 {
     flex: 1;
