--- a/assets/styles/profile.css
+++ b/assets/styles/profile.css
@@ -14,10 +14,10 @@
 }
 button {
   height:20px;
-  
+  margin-top:20px;
 }
 #third-page {
-    margin: 10px 12%;
+    margin: 8px 15%;
        height:max-content;
    }
    body {
@@ -71,13 +71,13 @@ line-height:20px;
   }
  label[for="textbox2"] {
     color:#111;
-    background-color: #79C6D7;
+    background-color: transparent;
   }
 main {
     margin: 10px ;
    }
    .topnav-3{
-    margin: -8px -15.8%;
+    margin: -8px -21.4%;
     width: 150%;
   }
   .topnav a {
@@ -302,4 +302,18 @@ input[type="textarea"]{
     width:300px;
     height:400px;
   }
-  
+  @media (max-width:1213px){
+   *#third-page header nav a {
+padding: 3%;
+    }
+  }
+  @media (max-width:959px){
+    *#third-page header nav a {
+ padding: 2px;
+     }
+   }
+   @media (max-width:638px){
+    *#third-page header nav a {
+ padding: 2px;
+     }
+   }
